@@ -22,7 +22,7 @@ README for Modules versions
 
  nginx-lua
   Homepage: https://github.com/openresty/lua-nginx-module
-  Version: v0.9.15
+  Version: v0.9.15 + f4e1311
 
  nginx-upstream-fair
   Homepage: https://github.com/gnosek/nginx-upstream-fair
