@@ -350,7 +350,15 @@ ngx_http_lua_timer_handler(ngx_event_t *ev)
 
 #if defined(nginx_version) && nginx_version >= 1003014
 
+#   if nginx_version >= 1009000
+
+    ngx_set_connection_log(r->connection, clcf->error_log);
+
+#   else
+
     ngx_http_set_connection_log(r->connection, clcf->error_log);
+
+#   endif
 
 #else
 
