@@ -49,7 +49,6 @@ time ngx-build $force $version \
                 --with-http_gunzip_module \
           --with-select_module \
           --with-poll_module \
-          --with-rtsig_module \
                 $opts \
                 --with-debug
 
